--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "antd": "^5.20.5",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -23,6 +24,8 @@
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-wooden-tree": "^2.2.0"
   },
@@ -40,5 +43,4 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
- 
 }
