--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "jsbarcode": "^3.11.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.331.0",
     "moment": "^2.30.1",
